fixed juin not showing

--- a/src/app/Components/user/selected-apart/selected-apart.component.css
+++ b/src/app/Components/user/selected-apart/selected-apart.component.css
@@ -354,3 +354,27 @@ ngb-rating {
   flex-wrap: wrap;
 }
 
+
+
+
+/* For screens larger than 600px */
+/* @media (min-width: 600px) {
+  .fc-daygrid-day-frame {
+    min-height: 200px; 
+    min-width:100px ;
+  }
+} */
+
+/* For screens smaller than 600px */
+/* @media (max-width: 599px) {
+  .fc-daygrid-day-frame {
+    min-height: 300px;
+    min-width:75px ; 
+  }
+} */
+
+@media (max-width: 515px) {
+  .fc-event-title {
+    font-size: 50px; /* Adjust this value as needed */
+  }
+}
